--- a/app/views/quizlist.html
+++ b/app/views/quizlist.html
@@ -24,6 +24,9 @@
           <a href="/#/home" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> Main Page
           </a>
+          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#/quiz/{{getOngoingQuizId()}}" class="list-group-item">
+            <i class="fa fa-long-arrow-left"></i> Back to Last Ongoing Quiz
+          </a>
         </div>        
       </div>
     </div>
@@ -33,7 +36,10 @@
       <div class="row">
        <div class="col-sm-12">
          <div class="container-fluid">
-          <div class="jumbotron"></div>
+          <div class="panel panel-default">
+            <div id="chart">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -63,19 +69,15 @@
                       <li data-ng-repeat="subTopic in topic.subTopics"><label class="tree-toggler nav-header" ng-bind="getSubTopicBySubTopicId(subTopic.id).name"></label>
                         <ul class="nav nav-list tree">
                           <li>
-                            <div class="col-sm-8">
-                              <a data-ng-href="#/quiz/{{getQuizBySubTopicId(subTopic.id).id}}">
+                            <div class="col-sm-5">
+                              <a data-ng-class="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'quiz-finished' : ''" data-ng-style="{ 'text-decoration': getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'line-through' : 'underline'}" data-ng-href="#/quiz/{{getQuizBySubTopicId(subTopic.id).id}}">
                                 {{getQuizBySubTopicId(subTopic.id).title}}
                               </a>
+                              <i class="fa fa-check quiz-finished" data-ng-if="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'"></i>
                             </div>
-                            <div class="col-sm-2">{{getQuizBySubTopicId(subTopic.id).score}}
+                            <div class="col-sm-4" data-ng-bind="'Status: ' + getQuizBySubTopicId(subTopic.id).submitted">
                             </div>
-                            <div class="col-sm-2 progress-outer">
-                              <div class='progress'>
-                                <div class='hide'></div>
-                                <div class='active'></div>
-                                <div class='active2'></div>
-                              </div>
+                            <div class="col-sm-3" data-ng-if="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'">Score: {{getQuizBySubTopicId(subTopic.id).score}}/100
                             </div>
                           </li>
                           <li>
@@ -101,41 +103,15 @@
             </legend>
           </div>
         </div>
-                        <!--
-                        <div>
-                          <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
-                        </div>
-                      -->
-                      <div class="row">
+                        <div class="row" data-ng-repeat="unit in getRelatedCourseUnit() | orderBy: 'recommended'">
                         <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
+                          <a data-ng-href="#/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
                         <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
+                          <h6 class="unit-name"><a data-ng-href="#/subtopic/{{unit.id}}">{{unit.name}}</a></h6>
+                          <p>{{unit.description}}</p>
                         </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
                         </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
 
                       <div class="row" id="recommended-items-header">
                         <div class="col-sm-12">
@@ -149,33 +125,13 @@
                           <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
                         </div>
                       -->
-                      <div class="row">
+                      <div class="row" data-ng-repeat="unit in getRelatedQuizzes() | orderBy: 'recommended'">
                         <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
+                          <a data-ng-href="#/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
                         <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 1</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 2</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 3</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
+                          <h6 class="unit-name" data-ng-cloak><a data-ng-href="#/subtopic/{{unit.id}}">{{unit.title}}</a></h6>
+                          <p data-ng-cloak>Estimated time taken: {{2*unit.questions.length}} min</p>
                         </div>
 
                       </div>
