--- a/app/views/subtopic.html
+++ b/app/views/subtopic.html
@@ -15,14 +15,17 @@
           <span href="#" class="list-group-item active">
             <h5 data-ng-cloak>{{subTopic.name}}</h5>
           </span>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}">
+          <a data-ng-if="quiz.type == 'normal'" class="list-group-item" data-ng-href="#/subject/{{subject.id}}">
             <i class="fa fa-mortar-board"></i> Lectures <span class="badge" ng-model="numberOfSubTopics" data-ng-bind="numberOfSubTopics()"></span>
           </a>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}/quizzes">
-            <i class="fa fa-question"></i> Quizzes <span class="badge">14</span>
+          <a data-ng-if="quiz.type == 'normal'" class="list-group-item" data-ng-href="#/subject/{{subject.id}}/quizzes">
+            <i class="fa fa-question"></i> Quizzes <span class="badge" data-ng-model="numberOfQuizzes" data-ng-bind="numberOfQuizzes()"></span>
           </a>
-          <a href="/#/home" class="list-group-item">
+          <a data-ng-if="quiz.type == 'normal'" data-ng-href="/#/subject/{{subject.id}}" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> {{subject.name}}
+          </a>
+          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#/quiz/{{getOngoingQuizId()}}" class="list-group-item">
+            <i class="fa fa-long-arrow-left"></i> Back to Last Ongoing Quiz
           </a>
         </div>        
       </div>
@@ -33,125 +36,82 @@
       <div class="row">
        <div class="col-sm-12">
          <div class="container-fluid">
-          <div class="jumbotron"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="margin-bottom: 0px; margin-top: 15px;">
-      <div class="col-sm-12">
-        <div id="bc1" class="btn-group btn-breadcrumb">
-          <a href="#/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
-          <a data-ng-href="#/subject/{{subject.id}}" class="btn btn-default" data-ng-bind="subject.name"><div></div></a>
-          <a data-ng-href="#/subtopic/{{subTopic.id}}" data-ng-bind="subTopic.name" class="btn btn-default"><div></div></a>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div id="quiz-content" class="col-sm-8">
-        <div class="container-fluid" style="margin-top: 15px;">
           <div class="panel panel-default">
-            <div class="panel-heading">
-              <h1 class="panel-title" data-ng-cloak>{{quiz.title}} </h1> 
+            <div id="chart">
             </div>
-            <div class="panel-body">
-              <ng-pdf template-url="views/viewer.html"></ng-pdf>
-            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="margin-bottom: 0px; margin-top: 15px;">
+        <div class="col-sm-12">
+          <div id="bc1" class="btn-group btn-breadcrumb">
+            <a href="#/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
+            <a data-ng-href="#/subject/{{subject.id}}" class="btn btn-default" data-ng-bind="subject.name"><div></div></a>
+            <a data-ng-href="#/subtopic/{{subTopic.id}}" data-ng-bind="subTopic.name" class="btn btn-default"><div></div></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div id="quiz-content" class="col-sm-8">
+          <div class="container-fluid" style="margin-top: 15px;">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1 class="panel-title" data-ng-cloak>{{quiz.title}} </h1> 
+              </div>
+              <div class="panel-body">
+                <ng-pdf template-url="views/viewer.html"></ng-pdf>
+              </div>
 
-            <div class="panel-footer clearfix">
-              <div class="pull-right">
-                <button class="btn btn-default" ng-click="zoomIn()">+</span></button>
-                <button class="btn btn-default" ng-click="zoomOut()">-</span></button>
-                <span>Page: </span><input class="page-num" type="text" min=1 ng-model="pageNum"><span> / {{pageCount}}</span>
-                <button class="btn btn-default" ng-click="goPrevious()">Previous</span></button>
-                <button class="btn btn-default" ng-click="goNext()">Next</span></button>
+              <div class="panel-footer clearfix">
+                <div class="pull-right">
+                  <button class="btn btn-default" data-ng-click="zoomIn()">+</span></button>
+                  <button class="btn btn-default" data-ng-click="zoomOut()">-</span></button>
+                  <span>Page: </span><input class="page-num" type="text" min=1 ng-model="pageNum"><span> / {{pageCount}}</span>
+                  <button class="btn btn-default" data-ng-click="goPrevious()">Previous</span></button>
+                  <button class="btn btn-default" data-ng-click="goNext()">Next</span></button>
+                  <button class="btn btn-success" data-ng-click="done()">I'm Done!</span></button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-sm-4" id="right-sidebar">
-        <div class="row" id="recommended-items-header">
-          <div class="col-sm-12">
-            <legend>
-              RELATED COURSE UNITS
-            </legend>
+        <div data-ng-if="quiz.type == 'normal'" class="col-sm-4" id="right-sidebar">
+          <div class="row" id="recommended-items-header">
+            <div class="col-sm-12">
+              <legend>
+                RELATED COURSE UNITS
+              </legend>
+            </div>
           </div>
-        </div>
+          <div class="row" data-ng-repeat="unit in getRelatedCourseUnit() | orderBy: 'recommended'">
+            <div class="col-sm-5">
+              <a data-ng-href="#/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
+            </div>
+            <div class="col-sm-7 recommended-item">
+              <h6 class="unit-name"><a data-ng-href="#/subtopic/{{unit.id}}">{{unit.name}}</a></h6>
+              <p>{{unit.description}}</p>
+            </div>
+          </div>
+
+          <div class="row" id="recommended-items-header">
+            <div class="col-sm-12">
+              <legend>
+                RELATED QUIZZES
+              </legend>
+            </div>
+          </div>
                         <!--
                         <div>
                           <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
                         </div>
                       -->
-                      <div class="row">
+                      <div class="row" data-ng-repeat="unit in getRelatedQuizzes() | orderBy: 'recommended'">
                         <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
+                        <a data-ng-href="#/quiz/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
                         <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Unit Name</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-
-                      <div class="row" id="recommended-items-header">
-                        <div class="col-sm-12">
-                          <legend>
-                            RELATED QUIZZES
-                          </legend>
-                        </div>
-                      </div>
-                        <!--
-                        <div>
-                          <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
-                        </div>
-                      -->
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 1</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 2</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
-                        </div>
-
-                      </div>
-                      <div class="row">
-                        <div class="col-sm-5">
-                          <img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image">
-                        </div>
-                        <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name">Quiz 3</h6>
-                          <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac.</p>
+                          <h6 class="unit-name" data-ng-cloak><a data-ng-href="#/quiz/{{unit.id}}">{{unit.title}}</a></h6>
+                          <p data-ng-cloak>Estimated time taken: {{2*unit.questions.length}} min</p>
                         </div>
 
                       </div>
