--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div fit-vids>
-        <iframe width="425" height="349" src="http://www.youtube.com/embed/FKWwdQu6_ok" frameborder="0" allowfullscreen></iframe>
+        <iframe width="425" height="349" src="https://www.youtube.com/embed/FKWwdQu6_ok" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
