Fixed issues when using grunt build

--- a/app/views/quizlist.html
+++ b/app/views/quizlist.html
@@ -48,6 +48,7 @@
         <div id="bc1" class="btn-group btn-breadcrumb">
           <a href="#/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
           <a class="btn btn-default" data-ng-href="#/subject/{{subject.id}}"><div data-ng-bind="subject.name"></div></a>
+          <a class="btn btn-default" data-ng-href="#/subject/{{subject.id}}/quizzes"><div>Quizzes</div></a>
         </div>
       </div>
     </div>
