--- a/app/views/quizlist.html
+++ b/app/views/quizlist.html
@@ -104,7 +104,7 @@
             </legend>
           </div>
         </div>
-                        <div class="row" data-ng-repeat="unit in getRelatedCourseUnit() | orderBy: 'recommended'">
+                        <div class="row related-items" data-ng-repeat="unit in getRelatedCourseUnit() | orderBy: 'recommended'">
                         <div class="col-sm-5">
                           <a data-ng-href="#/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
@@ -126,7 +126,7 @@
                           <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
                         </div>
                       -->
-                      <div class="row" data-ng-repeat="unit in getRelatedQuizzes() | orderBy: 'recommended'">
+                      <div class="row related-items" data-ng-repeat="unit in getRelatedQuizzes() | orderBy: 'recommended'">
                         <div class="col-sm-5">
                           <a data-ng-href="#/quiz/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
