--- a/app/styles/subtopic.css
+++ b/app/styles/subtopic.css
@@ -18,3 +18,7 @@ body {
 .col-sm-2,.col-sm-4,.col-sm-8 {
 	/* background-color: white; */
 }
+
+#right-sidebar > .related-items {
+	margin-top: 10px;
+}
