--- a/app/views/home.html
+++ b/app/views/home.html
@@ -68,8 +68,8 @@
     <div class="item-to-show" data-ng-repeat="s in deadlineItems" style="display: inline-block; width: 20%; margin-right: 20px;">
         <div data-ng-switch="s.name == undefined">
           <div data-ng-switch-when="true">
-            <a data-ng-href="#/quiz/{{s.id}}"><img src="/images/owl8.jpg"/></a>
-            <a data-ng-href="#/quiz/{{s.id}}">
+            <a data-ng-href="#!/quiz/{{s.id}}"><img src="/images/owl8.jpg"/></a>
+            <a data-ng-href="#!/quiz/{{s.id}}">
               <h6>{{s.title}}</h6>
             </a>
             <p style="font-weight: 200; font-size: 12px;">
@@ -77,8 +77,8 @@
             </p>
           </div>
           <div data-ng-switch-when="false">
-            <a data-ng-href="#/subtopic/{{s.id}}"><img src="/images/owl8.jpg"/></a>
-            <a data-ng-href="#/subtopic/{{s.id}}">
+            <a data-ng-href="#!/subtopic/{{s.id}}"><img src="/images/owl8.jpg"/></a>
+            <a data-ng-href="#!/subtopic/{{s.id}}">
               <h6>{{s.name}}</h6>
             </a>
             <p style="font-weight: 200; font-size: 12px;">
@@ -107,8 +107,8 @@
       <div class="item-to-show" data-ng-repeat="s in getRegularItems() | orderBy: 'recommended'" style="display: inline-block; width: 20%; margin-right: 20px;">
         <div data-ng-switch="s.name == undefined">
           <div data-ng-switch-when="true">
-            <a data-ng-href="#/quiz/{{s.id}}"><img src="/images/owl8.jpg"/></a>
-            <a data-ng-href="#/quiz/{{s.id}}">
+            <a data-ng-href="#!/quiz/{{s.id}}"><img src="/images/owl8.jpg"/></a>
+            <a data-ng-href="#!/quiz/{{s.id}}">
               <h6>{{s.title}}</h6>
             </a>
             <p style="font-weight: 200; font-size: 12px;">
@@ -116,8 +116,8 @@
             </p>
           </div>
           <div data-ng-switch-when="false">
-            <a data-ng-href="#/subtopic/{{s.id}}"><img src="/images/owl8.jpg"/></a>
-            <a data-ng-href="#/subtopic/{{s.id}}">
+            <a data-ng-href="#!/subtopic/{{s.id}}"><img src="/images/owl8.jpg"/></a>
+            <a data-ng-href="#!/subtopic/{{s.id}}">
               <h6>{{s.name}}</h6>
             </a>
             <p style="font-weight: 200; font-size: 12px;">
@@ -138,13 +138,13 @@
   <div class="row" id="current-studying">
     <div ng-repeat="subject in studySubjects | filter: {'eduLevel' : chosenLevel}" class="blockquote-box clearfix">
       <div class="col-sm-2">
-        <a data-ng-href="#/subject/{{subject.id}}">
+        <a data-ng-href="#!/subject/{{subject.id}}">
           <div class="square pull-left" ng-bind-html="subject.representingBox">
           </div>
         </a>
       </div>
       <div class="col-sm-10">
-        <a data-ng-href="#/subject/{{subject.id}}"><h4>
+        <a data-ng-href="#!/subject/{{subject.id}}"><h4>
           {{subject.name}}</h4></a>
           <p>
             {{subject.description}}
