--- a/app/views/quizlist.html
+++ b/app/views/quizlist.html
@@ -15,16 +15,16 @@
           <span href="#" class="list-group-item active">
             <h5 data-ng-cloak>{{subject.name}}</h5>
           </span>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}">
+          <a class="list-group-item" data-ng-href="#!/subject/{{subject.id}}">
             <i class="fa fa-mortar-board"></i> Lectures <span class="badge" data-ng-model="numberOfSubTopics" data-ng-bind="numberOfSubTopics()"></span>
           </a>
-          <a class="list-group-item" data-ng-href="#/subject/{{subject.id}}/quizzes">
+          <a class="list-group-item" data-ng-href="#!/subject/{{subject.id}}/quizzes">
             <i class="fa fa-question"></i> Quizzes <span class="badge" data-ng-model="numberOfQuizzes" data-ng-bind="numberOfQuizzes()"></span>
           </a>
-          <a href="/#/home" class="list-group-item">
+          <a href="/#!/home" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> Main Page
           </a>
-          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#/quiz/{{getOngoingQuizId()}}" class="list-group-item">
+          <a data-ng-if="getOngoingQuizId() != ''" data-ng-href="/#!/quiz/{{getOngoingQuizId()}}" class="list-group-item">
             <i class="fa fa-long-arrow-left"></i> Back to Last Ongoing Quiz
           </a>
         </div>        
@@ -46,9 +46,9 @@
     <div class="row" style="margin-bottom: 0px; margin-top: 15px;">
       <div class="col-sm-12">
         <div id="bc1" class="btn-group btn-breadcrumb">
-          <a href="#/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
-          <a class="btn btn-default" data-ng-href="#/subject/{{subject.id}}"><div data-ng-bind="subject.name"></div></a>
-          <a class="btn btn-default" data-ng-href="#/subject/{{subject.id}}/quizzes"><div>Quizzes</div></a>
+          <a href="#!/home/" class="btn btn-default"><i class="fa fa-home"></i></a>
+          <a class="btn btn-default" data-ng-href="#!/subject/{{subject.id}}"><div data-ng-bind="subject.name"></div></a>
+          <a class="btn btn-default" data-ng-href="#!/subject/{{subject.id}}/quizzes"><div>Quizzes</div></a>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
                         <ul class="nav nav-list tree">
                           <li>
                             <div class="col-sm-5">
-                              <a data-ng-class="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'quiz-finished' : ''" data-ng-style="{ 'text-decoration': getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'line-through' : 'underline'}" data-ng-href="#/quiz/{{getQuizBySubTopicId(subTopic.id).id}}">
+                              <a data-ng-class="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'quiz-finished' : ''" data-ng-style="{ 'text-decoration': getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'? 'line-through' : 'underline'}" data-ng-href="#!/quiz/{{getQuizBySubTopicId(subTopic.id).id}}">
                                 {{getQuizBySubTopicId(subTopic.id).title}}
                               </a>
                               <i class="fa fa-check quiz-finished" data-ng-if="getQuizBySubTopicId(subTopic.id).submitted == 'Submitted'"></i>
@@ -106,10 +106,10 @@
         </div>
                         <div class="row related-items" data-ng-repeat="unit in getRelatedCourseUnit() | orderBy: 'recommended'">
                         <div class="col-sm-5">
-                          <a data-ng-href="#/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
+                          <a data-ng-href="#!/subtopic/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
                         <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name"><a data-ng-href="#/subtopic/{{unit.id}}">{{unit.name}}</a></h6>
+                          <h6 class="unit-name"><a data-ng-href="#!/subtopic/{{unit.id}}">{{unit.name}}</a></h6>
                           <p>{{unit.description}}</p>
                         </div>
                         </div>
@@ -128,10 +128,10 @@
                       -->
                       <div class="row related-items" data-ng-repeat="unit in getRelatedQuizzes() | orderBy: 'recommended'">
                         <div class="col-sm-5">
-                          <a data-ng-href="#/quiz/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
+                          <a data-ng-href="#!/quiz/{{unit.id}}"><img class="img-responsive" src="/images/owl2.jpg" alt="Lazy Owl Image"></a>
                         </div>
                         <div class="col-sm-7 recommended-item">
-                          <h6 class="unit-name" data-ng-cloak><a data-ng-href="#/subtopic/{{unit.id}}">{{unit.title}}</a></h6>
+                          <h6 class="unit-name" data-ng-cloak><a data-ng-href="#!/subtopic/{{unit.id}}">{{unit.title}}</a></h6>
                           <p data-ng-cloak>Estimated time taken: {{2*unit.questions.length}} min</p>
                         </div>
 
